# tgbot_for_team

./: .gitignore  1st_prompt.txt  AGENTS.md  README.md  main.py  pyproject.toml
bot/: __init__.py  creator.py
db/: __init__.py  connection.py  queries.py
handlers/: __init__.py  add_task.py  edit_task.py  export_csv.py  list_tasks.py  start.py
openspec/: project.md
openspec/changes/001-initial-bot/: design.md  proposal.md  tasks.md
openspec/changes/002-task-extensions/: design.md  proposal.md  tasks.md
services/: __init__.py  csv_service.py  member_service.py  overdue_service.py  task_service.py
