[project]
name = "taskgroupbot"
version = "0.1.0"
description = "Telegram-бот для командного управления задачами в групповом чате"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "aiosqlite>=0.19,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"