[project]
name = "taskgroupbot"
version = "0.1.0"
description = "Telegram bot for team task management"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "aiosqlite>=0.19,<1.0",
    "python-dotenv>=1.0,<2.0",
    "tzdata>=2024.1",
]

[tool.setuptools.packages.find]
include = ["bot*", "db*", "handlers*", "services*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
